--- a/Fylo dark theme landing page/style.css
+++ b/Fylo dark theme landing page/style.css
@@ -351,8 +351,8 @@ transform: translateY(3px);
 }
 .footer .footer-box .footer-bottom .footer-address {
     width: 380px;
-    display: flex;
     font-size: 15px;
+    display: flex;
 }
 .footer .footer-box .footer-bottom .footer-address img {
     margin-right: 20px;
@@ -697,25 +697,25 @@ transform: translateY(3px);
         margin-bottom: 20px;
         font-size: 15px;
     }
-    .footer .footer-bottom {
+    .footer .footer-box .footer-bottom {
         flex-direction: column;
+        margin: 0;
     }
     .footer .container {
         padding : 400px 20px 20px 20px;
     }
-    .footer .footer-img {
+    .footer .footer-box .footer-bottom {
         display: flex;
-        justify-content: center;
+        margin-top: 30px;
+        font-size: 15px;
     }
     .footer .footer-img img {
         width: 150px;
         margin-bottom: 50px;
+        display: inline-block;
     }
     .footer .footer-bottom p {
         font-size: 15px;
-    }
-    .footer .footer-bottom .footer-address p {
-        width: 300px;
     }
     .footer .footer-bottom img {
         width: 15px;
@@ -726,6 +726,7 @@ transform: translateY(3px);
     }
     .footer .footer-box .footer-bottom .footer-address {
         margin-bottom: 20px;
+        width: auto;
     }
     .footer .footer-box .footer-bottom .footer-contact {
         margin-bottom: 20px;
